$Id$
===============================================================

233	Luke Howard <lukeh@padl.com>

	* if do_open() returns NSS_UNAVAIL, don't try to do
	  server reconnect; only do it if NSS_TRYAGAIN is returned
	  This should fix the problems introduced by the fixes in
	  nss_ldap-227 (delayed binding)

232	Luke Howard <lukeh@padl.com>

	* fix for BUG#138 (blind last char remove in ldap.secret)

230	Luke Howard <lukeh@padl.com>

	* don't free gss_krb5_ccache_name() output (Heimdal)

229	Luke Howard <lukeh@padl.com>

	* more debugging in initgroups and _nss_ldap_getentry()
	* fix _nss_ldap_getentry() enumeration behaviour, and
	  optimize by not searching if the requested attribute
	  cannot be mapped

228	Luke Howard <lukeh@padl.com>

	* fix for BUG#188: better documentation for OpenLDAP
	  SSL options
	* fix for BUG#189: do not configure tls_checkpeer
	  unless it is explicitly specifier in ldap.conf
	* fix for BUG#190: set ls_state to LS_UNINITIALIZED
	  after fork

227	Luke Howard <lukeh@padl.com>

	* separate initializing LDAP session with actually
	  connecting to the DSA, so that we don't try to
	  bind until we actually need to search (which allows
	  the retry logic in the search function to also apply
	  to binding). NB: this will only provide improved
	  behaviour for LDAP client libraries that support
	  ldap_init() or ldap_initialize() rather than ldap_open
	* fix for BUG#183: support pw_change and pw_expire
	  on BSD
	* fix for BUG#187: NSS_BUFLEN_DEFAULT causing problems
	  on IRS platforms
	* fix for glibc 2.1 from Alexander Spannagel

226	Luke Howard <lukeh@padl.com>

	* make LDAP_NSS_NGROUPS configurable with
	  --with-ngroups (experts only) option

225	Luke Howard <lukeh@padl.com>

	* make LDAP_NSS_NGROUPS 64 - better choice for
	  small directories

224	Luke Howard <lukeh@padl.com>

	* don't double-free on realloc() failure in
	  do_parse_group_members()
	* don't pass LDAP session as an argument, as