@@ -57,9 +57,13 @@ base dc=padl,dc=com
 # Bind/connect timelimit
 #bind_timelimit 30
 
-# Reconnect policy: hard (default) will retry connecting to
-# the software with exponential backoff, soft will fail
-# immediately.
+# Reconnect policy:
+#  hard_open: reconnect to DSA with exponential backoff if
+#             opening connection failed
+#  hard_init: reconnect to DSA with exponential backoff if
+#             initializing connection failed
+#  hard:      alias for hard_open
+#  soft:      return immediately on server failure
 #bind_policy hard
 
 # Idle timelimit; client will close connections
